# telegram-notes

./: alembic.ini  pyproject.toml
bot/: __main__.py  utils.py
bot/config/: __init__.py  config.py
bot/db/: __init__.py  main.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 20231210-012848_4665e62c38e7_add_notes_table.py
bot/db/models/: note.py
bot/db/repositories/: base.py  main.py  note.py
bot/dialogs/: __init__.py  main.py  states.py
bot/dialogs/list/: dialogs.py  getters.py  handlers.py
bot/dialogs/note/: __init__.py  dialogs.py  getters.py  handlers.py
bot/dialogs/root/: __init__.py  dialogs.py  handlers.py
bot/dialogs/search/: dialogs.py  handlers.py
bot/handlers/: __init__.py  main.py  root.py
bot/middlewares/: __init__.py  main.py  repo.py
config/: config.toml  config.toml.template
